WTPlanner/force-app/main/default/objects/Session_Type__c/Session_Type__c.object-meta.xml
<CustomObject>
    <label>Session Type</label>
    <pluralLabel>Session Types</pluralLabel>
    <nameField>
        <label>Session Type Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>