WTPlanner/force-app/main/default/objects/Session_Type__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <description>The parent event this session type belongs to (Master-Detail relationship)</description>
    <label>Event</label>
    <type>MasterDetail</type>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Session Types</relationshipLabel>
    <relationshipName>Session_Types</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>