WTPlanner/force-app/main/default/objects/Session_Type__c/listViews/All_Session_Types.listView-meta.xml
<ListView>
    <fullName>All_Session_Types</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Session Types</label>
</ListView>