WTPlanner/force-app/main/default/objects/Session_Type__c/listViews/World_Tour_Milan_2026_Session_Types.listView-meta.xml
<ListView>
    <fullName>World_Tour_Milan_2026_Session_Types</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>World Tour Milan 2026 Session Types</label>
</ListView>